<resources>
    <string name="app_name">Fahrtenbuch</string>
    <string name="tv_kilometers">%.3f km</string>
    <string name="btn_start">Messung starten</string>
    <string name="btn_stop">Messung stoppen</string>
    <string name="btn_delete_db">DB Löschen</string>
    <string name="btn_export">Exportieren</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_delete">Löschen</string>
    <string name="menu_export">Exportieren</string>
    <string name="title_activity_maps">Map</string>
    <string name="iv_active_desciption">Tracking Zustand</string>
    <string name="tv_active_active">Tracking aktiv</string>
    <string name="tv_active_inactive">Tracking deaktiviert</string>
    <string name="txt_du_bist_seit">Du bist seit</string>
    <string name="txt_gefahren">gefahren.</string>
</resources>
