<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_start"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        app:showAsAction="ifRoom"
        android:onClick="onStartMessung"
        android:title="@string/menu_start">
    </item>
    <item
        android:id="@+id/menu_stop"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        app:showAsAction="ifRoom|withText"
        android:onClick="onStopMessung"
        android:title="@string/menu_stop">
    </item>
    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        app:showAsAction="ifRoom|withText"
        android:onClick="onExport"
        android:title="@string/menu_export">
    </item>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        app:showAsAction="ifRoom|withText"
        android:onClick="onDelete"
        android:title="@string/menu_delete">
    </item>
</menu>